style.css
@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap");

:root {
  --scissors-gradient-1: hsl(39, 89%, 49%);
  --scissors-gradient-2: hsl(40, 84%, 53%);
  --paper-gradient-1: hsl(230, 89%, 62%);
  --paper-gradient-2: hsl(230, 89%, 65%);
  --rock-gradient-1: hsl(349, 71%, 52%);
  --rock-gradient-2: hsl(349, 70%, 56%);
  --lizard-gradient-1: hsl(261, 73%, 60%);
  --lizard-gradient-2: hsl(261, 72%, 63%);
  --spock-gradient-1: hsl(189, 59%, 53%);
  --spock-gradient-2: hsl(189, 58%, 57%);
  --cyan-1: hsl(189, 59%, 53%);
  --cyan-2: hsl(189, 58%, 57%);

  --radial-gradient-1: hsl(214, 47%, 23%);
  --radial-gradient-2: hsl(237, 49%, 15%);

  --dark-text: hsl(229, 25%, 31%);
  --score-text: hsl(229, 64%, 46%);
  --header-outline: hsl(217, 16%, 45%);

  --light: 600;
  --bold: 700;

  --mobile: 375px;
  --desktop: 1366px;

  --choice-border-width: 1.5rem;
  --choice-dimensions: 10rem;
}

@media (max-width: 375px) {
  :root {
    --choice-border-width: 0.75rem;
    --choice-dimensions: 5rem;
  }
}

html {
  font-size: 16px;
  font-family: "Barlow Semi Condensed", sans-serif;
}

body {
  background: radial-gradient(
      circle at center top,
      var(--radial-gradient-1),
      var(--radial-gradient-2)
    )
    no-repeat center center fixed;
  background-size: cover;
}

button {
  cursor: pointer;
  height: 2.75rem;
  width: 8rem;
  border-radius: 0.5rem;
}

.top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 42rem;
  height: auto;
  margin: 2rem auto 0 auto;
  padding: 1rem;

  border: solid;
  border-radius: 1rem;
  border-color: var(--header-outline);
}

@media (max-width: 375px) {
  .top {
    margin-left: 2rem;
    margin-right: 2rem;
  }
}

.top__logo-box {
  cursor: pointer;
  display: flex;
  align-items: center;
}

@media (max-width: 375px) {
  .top__logo-box > img {
    width: 4rem;
  }
}

.top__logo-box--bonus-logo {
  display: none;
}

.top__score {
  padding: 0.8rem;
  background-color: white;
  border-radius: 0.5rem;
  width: 7rem;
  height: auto;
}
@media (max-width: 375px) {
  .top__score {
    width: 3rem;
    height: 2.75rem;
    padding-top: 0.5rem;
  }
}

.top__score--heading {
  margin: 0;
  text-align: center;
  color: rgb(4, 4, 180);
}

@media (max-width: 375px) {
  .top__score--heading {
    font-size: 0.75rem;
  }
}

.top__score--score {
  margin: 0;
  text-align: center;
  font-size: 3.5rem;
}

@media (max-width: 375px) {
  .top__score--score {
    font-size: 2rem;
  }
}

.game {
  display: flex;
  justify-content: center;
}

.options {
  display: grid;
  margin-top: 4rem;

  height: 28rem;

  /* Bonus Setting */
  /* grid-template-columns: repeat(9, auto);
  grid-template-rows:
    var(--choice-border-width) repeat(3, auto) var(--choice-border-width)
    repeat(3, auto) var(--choice-border-width) 2rem var(--choice-border-width) repeat(
      3,
      auto
    )
    var(--choice-border-width); */
}

@media (max-width: 375px) {
  .options {
    height: auto;
  }
}

.choice-box {
  cursor: pointer;
  z-index: 1;
  border-style: solid;
  border-width: var(--choice-border-width);
  border-radius: 50%;
  /* border-image-source: linear-gradient(to bottom, var(--paper-gradient-1), var(--paper-gradient-2)) ;
  border-image-slice: 1;
  border-image-outset: 0;
  border-image-repeat: round; */

  height: var(--choice-dimensions);
  width: var(--choice-dimensions);
  box-shadow: inset 0px 20px 0px -12px #d6d6d6;

  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
}

.options__paper-box {
  border-color: var(--paper-gradient-2);
}
.options__scissors-box {
  border-color: var(--scissors-gradient-2);
}
.options__rock-box {
  border-color: var(--rock-gradient-2);
}
.options__lizard-box {
  border-color: var(--lizard-gradient-2);
}
.options__spock-box {
  border-color: var(--spock-gradient-2);
}

.choice-box > img {
  width: 4.2rem;
  height: auto;
}

@media (max-width: 375px) {
  .choice-box > img {
    width: 2rem;
    height: auto;
  }
}

.options__line {
  margin: auto;
  width: 100%;
}

.options__line > hr {
  border: solid;
  border-color: var(--radial-gradient-2);
  border-width: 0.5rem;
}

.options__paper-box {
  /* Regular Settings */
  grid-column: 1/4;
  grid-row: 1/2;
  /* Bonus Settings */
  /* grid-column: 7/10;
  grid-row: 5/10; */
}

.options__scissors-box {
  /* Regular Settings */
  grid-column: 5/8;
  grid-row: 1/2;
  /* Bonus Settings */
  /* grid-column: 4/7;
  grid-row: 1/6; */
}

.options__rock-box {
  /* Regular Settings */
  grid-column: 3/6;
  grid-row: 3/4;
  /* Bonus Settings */
  /* grid-column: 6/9;
  grid-row: 11/16; */
}

.options__lizard-box {
  /* Regular Settings */
  display: none;
  /* Bonus Settings */
  /* grid-column: 2/6;
  grid-row: 11/16; */
}

.options__spock-box {
  /* Regular Settings */
  display: none;
  /* Bonus Settings */
  /* grid-column: 1/4;
  grid-row: 5/10; */
}

.options__line--left-right {
  /* Regular Settings */
  grid-column: 1/8;
  grid-row: 1/2;
  /* Bonus Settings */
  /* grid-column: 2/9;
  grid-row: 13/14; */
}

.options__line--top-left-bottom-right {
  /* Regular Settings */
  grid-column: 2/5;
  grid-row: 1/4;
  transform: rotate(60deg);
  /* Bonus Settings */
  /* grid-column: 1/5;
  grid-row: 10;
  transform: rotate(70deg); */
}

.options__line--top-right-bottom-left {
  /* Regular Settings */
  grid-column: 4/7;
  grid-row: 1/4;
  transform: rotate(120deg);
  /* Bonus Settings */
  /* grid-column: 6/10;
  grid-row: 10;
  transform: rotate(110deg); */
}

.options__line--bottom-right-top-left {
  /* Regular Settings */
  display: none;
  /* Bonus Settings */
  /* grid-column: 5/10;
  grid-row: 5;
  transform: rotate(40deg); */
}

.options__line--bottom-left-top-right {
  /* Regular Settings */
  display: none;
  /* Bonus Settings */
  /* grid-column: 1/6;
  grid-row: 5;
  transform: rotate(140deg); */
}

.pick {
  position: relative;
  display: none;
  justify-content: center;
  gap: 4rem;
  grid-template-columns: var(--choice-dimensions) auto var(--choice-dimensions);
  margin-top: 4rem;
}

@media (max-width: 375px) {
  .pick {
    grid-template-columns: var(--choice-dimensions) auto;
    margin-left: 1.5rem;
  }
}

.pick__your-pick {
  grid-column: 1/2;
}
@media (max-width: 375px) {
  .pick__your-pick {
    grid-column: 1/2;
    grid-row: 1/2;

    display: grid;
  }
}

.pick__your-pick--container {
  display: flex;
  justify-content: center;
}

.pick__your-pick--container > div {
  position: absolute;
  margin-top: -1rem;
}

@media (max-width: 375px) {
  .pick__your-pick--container > div {
    margin-top: -1rem;
  }
}

.pick__house-pick {
  grid-column: 3/4;
}

@media (max-width: 375px) {
  .pick__house-pick {
    grid-column: 2/3;
    grid-row: 1/2;

    display: grid;
  }
}

.pick__house-pick--container {
  display: flex;
  justify-content: center;
}

.pick__house-pick--container > div {
  position: absolute;
  margin-top: -1rem;
}

.pick__your-pick--heading,
.pick__house-pick--heading,
.pick__outcome--heading {
  text-align: center;
  white-space: nowrap;
  color: white;
  margin-top: 0;
  margin-bottom: 3rem;
}

@media (max-width: 375px) {
  .pick__your-pick--heading,
  .pick__house-pick--heading {
    grid-row: 2/3;

    margin-bottom: 0;
    margin-top: auto;
  }
}

.pick__your-pick--container,
.pick__house-pick--container {
  border-radius: 50%;
  height: var(--choice-dimensions);
  width: var(--choice-dimensions);
  background-color: var(--radial-gradient-2);

  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 375px) {
  .pick__your-pick--container,
  .pick__house-pick--container {
    height: var(--choice-dimensions);
    width: var(--choice-dimensions);

    margin-bottom: 2rem;
  }
}

.pick__outcome {
  margin-top: auto;
  margin-bottom: auto;
  width: 8rem;
  display: none;
}

@media (max-width: 375px) {
  .pick__outcome {
    grid-column: 1/3;
    grid-row: 2/3;
    margin-left: auto;
    margin-right: auto;
  }
}

.pick__outcome--heading {
  margin-bottom: 0.25rem;
  margin-top: 0;
  font-size: 2rem;
}

.pick__outcome--play-again {
  font-weight: bolder;
  color: var(--dark-text);
  border: none;
}

.bottom {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 98%;
  margin-top: 5rem;
}

.rules-modal {
  display: none;
  justify-content: center;
  align-items: center;

  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
}

.rules-modal__container {
  display: grid;
  grid-template-columns: repeat(2, auto);
  row-gap: 1rem;

  background-color: white;
  border-radius: 0.5rem;
  padding: 1rem;
}

@media (max-width: 375px) {
  .rules-modal__container {
    grid-template-columns: auto;
    width: 100vw;
    height: 100vh;
    padding: 0;
    border-radius: 0;
  }
}

.rules-modal__container--heading {
  margin-top: 0;
  font-weight: 900;

  grid-column: 1/2;

  margin-top: auto;
  margin-bottom: auto;
}

@media (max-width: 375px) {
  .rules-modal__container--heading {
    grid-column: 1/2;
    text-align: center;
  }
}

.rules-modal__container--close {
  grid-column: 2/3;

  margin-top: auto;
  margin-bottom: auto;
}

@media (max-width: 375px) {
  .rules-modal__container--close {
    grid-column: 1/2;
    grid-row: 3;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
  }
}

.rules-modal__container--image {
  width: 100%;
  height: auto;
}

.rules-modal__container--bonus-image {
  width: 100%;
  height: auto;
  display: none;
}

@media (max-width: 375px) {
  .rules-modal__container--image,
  .rules-modal__container--bonus-image {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }
}

.rules-modal__container--close {
  cursor: pointer;
}

.rules-btn {
  background-color: transparent;
  border: solid;
  color: white;
  border-width: 0.05rem;

  font-size: 1rem;
}

@media (max-width: 375px) {
  .bottom {
    justify-content: center;
  }
}

